--- a/package.json
+++ b/package.json
@@ -12,15 +12,18 @@
   "dependencies": {
     "@koa/cors": "^5.0.0",
     "@types/koa": "^2.15.0",
+    "@types/koa-bodyparser": "^4.3.12",
     "@types/koa-json": "^2.0.23",
     "@types/koa-logger": "^3.1.5",
     "@types/koa-router": "^7.4.8",
     "koa": "^2.15.3",
+    "koa-bodyparser": "^4.4.1",
     "koa-json": "^2.0.2",
     "koa-logger": "^3.2.1",
     "koa-router": "^12.0.1",
     "koa-static-folder": "^0.1.6",
-    "node-fetch": "^3.3.1"
+    "node-fetch": "^3.3.1",
+    "sequelize": "^6.37.3"
   },
   "devDependencies": {
     "@types/koa__cors": "^5.0.0",
