--- a/package.json
+++ b/package.json
@@ -16,18 +16,24 @@
     "@types/koa-json": "^2.0.23",
     "@types/koa-logger": "^3.1.5",
     "@types/koa-router": "^7.4.8",
+    "jsonschema": "^1.4.1",
     "koa": "^2.15.3",
     "koa-bodyparser": "^4.4.1",
     "koa-json": "^2.0.2",
     "koa-logger": "^3.2.1",
+    "koa-passport": "^6.0.0",
     "koa-router": "^12.0.1",
     "koa-static-folder": "^0.1.6",
+    "mongoose": "^8.3.4",
     "node-fetch": "^3.3.1",
+    "passport-http": "^0.3.0",
     "sequelize": "^6.37.3"
   },
   "devDependencies": {
     "@types/koa__cors": "^5.0.0",
+    "@types/koa-passport": "^6.0.3",
     "@types/node": "^20.10.0",
+    "@types/passport-http": "^0.3.11",
     "tsx": "^4.7.1"
   }
 }
